--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 #root {
   padding: 0;
   margin: 0;
+}
+
+* {
+  font-family: 'Inter', sans-serif !important;
 }
 
 .heading {
@@ -9,6 +15,14 @@
 
 .lh-1 {
   line-height: 1em;
+}
+
+.lh-1_5 {
+  line-height: 1.2em;
+}
+
+.lh-5 {
+  line-height: 5em;
 }
 
 .lh-09 {
@@ -29,8 +43,15 @@
   vertical-align: middle;
 }
 
-.icon {
+.realign-icon {
   transform: translateY(-0.12em) translateX(-0.005em);
+}
+
+.icon-question {
+  font-size: 10em;
+  color: grey;
+  margin-bottom: -0.15em;
+  margin-top: -0.15em;
 }
 
 .header-subreddit-label {
@@ -72,7 +93,8 @@ a:hover {
 }
 
 .post-subheading {
-  margin-top: -8pt;
+  margin-top: -11pt;
+  margin-bottom: 5pt;
   margin-left: 0.5pt;
 }
 
@@ -84,4 +106,63 @@ a:visited {
   margin: 50px;
   display: flex;
   justify-content: center;
+}
+
+.container-center-nm {
+  display: flex;
+  justify-content: center;
+}
+
+.container-vertical-center {
+  width: 270px;
+  height: 150px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin: -75px 0 0 -135px;
+}
+
+ons-card {
+  width: 100;
+}
+
+.post {
+  padding-left: 1em;
+  padding-right: 1em;
+  background-color: white;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  margin-bottom: 1.1em;
+
+  box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.25);
+
+  transition: background-color 100ms ease-in;
+}
+
+.img-round {
+  border: 10px;
+}
+
+.zindex-back {
+  z-index: 1;
+}
+
+.zoom-in {
+  transition: transform 150ms ease-out, box-shadow 150ms ease-out, margin 150ms ease-out;
+  z-index: 2 !important;
+}
+
+.zoom-in:active, .zoom-in:focus {
+  transform: scale(105%);
+  margin: 0.2em 0 1em 0;
+  box-shadow: 0px 0px 17px 1px rgba(0, 0, 0, 0.4);
+  z-index: 2 !important;
+}
+
+.toolbar {
+  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.165);
+}
+
+.bg-obstruct {
+  background-color: rgba(0, 0, 0, 0.388);
 }
